--- a/index.html
+++ b/index.html
@@ -272,25 +272,26 @@
             </div>
 
 
-            <!-- Contact Form -->
-            <div class="col-md-6">
-                <form class="row g-3">
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" placeholder="Your Name" required>
-                    </div>
-                    <div class="col-md-6">
-                        <input type="email" class="form-control" placeholder="Your Email" required>
-                    </div>
-                    <div class="col-12">
-                        <textarea class="form-control" rows="4" placeholder="Your Message" required></textarea>
-                    </div>
-                    <div class="col-12 text-center">
-                        <button type="submit" class="btn btn-primary px-5">Send Message</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </section>
+           <!-- Contact Form -->
+<div class="col-md-6">
+  <form action="https://docs.google.com/forms/d/e/1FAIpQLSfGScitEc1QhebFh0fHLXGqheQzsfDOStUB3rifLf5vo6zFkQ/viewform?usp=header" method="GET" target="_blank">
+    <div class="row g-3">
+      <div class="col-md-6">
+        <input type="text" class="form-control" placeholder="Your Name" required>
+      </div>
+      <div class="col-md-6">
+        <input type="email" class="form-control" placeholder="Your Email" required>
+      </div>
+      <div class="col-12">
+        <textarea class="form-control" rows="4" placeholder="Your Message"></textarea>
+      </div>
+      <div class="col-12 text-center">
+        <button type="submit" class="btn btn-primary px-5">Send Message</button>
+      </div>
+    </div>
+  </form>
+</div>
+
 
 
     <footer class="footer bg-dark text-light pt-4 pb-3 mt-5">
